--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-xs-4" style="margin-top:40px;">
                     <div class="col item social">
-                        <a href="#"><i class="icon ion-social-facebook"></i></a>
+                        <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
                         <a href="#"><i class="icon ion-social-twitter"></i></a>
                         <a href="#"><i class="icon ion-social-snapchat"></i></a>
                         <a href="#"><i class="icon ion-social-instagram"></i></a>
