--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,7 @@
     </div>
     <hr>
 
-
+    <p>Test</p>
     <div class="row">
         <div class="col-sm-6" id="c1">
             <h2>What is angular?</h2>
