--- a/src/app/basics/basics.component.html
+++ b/src/app/basics/basics.component.html
@@ -1,17 +1,5 @@
-<p>basics works!</p>
-<p>basics works!</p>
-
-<p>basics works!</p>
-
-<p>basics works!</p>
-
-<p>basics works!</p>
-
-<p>basics works!</p>
-
-<p>basics works!</p>
-
-<p>basics works!</p>
-
-
-
+<div class="basic">
+    <div class="container">
+        <p>here</p>
+    </div>    
+</div>
