--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
-<div class="bg"></div>
-<div class="bg bg2"></div>
-<div class="bg bg3"></div>
+<div class="bg1"></div>
+<div class="bg1 bg2"></div>
+<div class="bg1 bg3"></div>
 <div class="container">
     <div class="row">
         <h1>About</h1>
