--- a/src/app/basics/basics.component.css
+++ b/src/app/basics/basics.component.css
@@ -1,3 +1,12 @@
 .basic{
     background-color: white;
 }
+
+.container{
+    align-items: center;
+    text-align: center;
+}
+
+hr {
+    border-top: 1px solid #2b2929;
+}
