--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer-dark" style="margin-top:50px ;">
+<div class="footer-dark">
     <footer>
         <div class="container">
             <div class="row">
