New project section added

--- a/src/app/basics/basics.component.html
+++ b/src/app/basics/basics.component.html
@@ -2,10 +2,22 @@
     <div class="container">
         <div class="row" style="margin-top:10px;">
             <div class="col-xs-12">
-                <h1>The Basics</h1>
+                <h1 style="text-align:center;">The Basics</h1>
             </div>
         </div>
         <hr>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <div class="row">
+            <p style="text-align:center;">As it was previously mentioned, there are 3 basic elements in this framework: components, templates and dependency injection. In this section, we will be exploring each one of them in depth. </p>
+        </div>
+        <div class="row">
+            <div class="col-xs-7">
+                <h2>Component</h2>
+                <p>Lorem ipsum d7olor sit amet consectetur adipisicing elit. Sequi quia ut natus magnam unde. Odio facere quisquam, est, fuga nihil, perspiciatis unde totam facilis neque accusantium cum praesentium dicta esse.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus eum odio dicta eveniet sint vero illum unde eius dolorem minima possimus, cupiditate ea quae sequi blanditiis voluptatum cumque recusandae ipsa.</p>
+            </div>
+            <div class="col-xs-5">
+                <h3>Here2</h3>
+            </div>
+        </div>
     </div>    
 </div>
