--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,1 @@
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; font-size: large; }
